namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 3tirewebapp-dev
  labels:
    app: 3tirewebapp
